--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
-body{
-    font-family: "Roboto", sans-serif;
-    text-align: left;
+
+@font-face {
+    font-family: "Roboto";
+    src: url(./fonts/Roboto-Medium.ttf);
 }
 
-.header, ul, .desc, .subheader, .image_row, .image_with_text, .testimonial, .contact_us{
+body{
+    font-family: "Roboto";
+    text-align: left;
+    margin: 0;
+}
+
+.header, ul, .desc, .subheader, .image_row, .image_with_text, .testimonial, .contact_us, .header_text{
     display: flex;
 }
 
@@ -15,29 +22,42 @@ body{
 .header{
     
     justify-content: space-around;
-
-    margin-top: 8px;
+    align-items: center;
     padding: 16px;
-
-    
 }
+
+.header_text{
+    margin: auto;
+    width: 1600px;
+    justify-content: space-between;
+    align-items: center;
+}
+
 
 ul{
     
     justify-content: right;
-    gap: 32px;
+    gap: 40px;
 }
 
 .desc{
     
     flex-direction: column;
-    width: 400px;
+    width: 620px;
 }
 
 .subheader{
     justify-content: space-around;
     align-items: center;
-    padding: 16px;
+    height: 450px;
+    
+}
+
+
+#main_image{
+    width: 540px;
+    height: auto;
+    outline: 2px solid white;
 }
 
 .image_row{
@@ -47,24 +67,36 @@ ul{
 
     padding: 32px;
     width: 800px;
+    height: 300px;
     margin: auto;
 
     
 }
-
+.s2{
+    display: flex;
+    flex-direction: column;
+    height: 550px;
+}
 .s2_title{
     text-align: center;
+    width: 600px;
+    margin: auto;
+
+    font-weight: 900;
+    color:#1f2937;
 }
 
 .image_with_text{
     flex-direction: column;
     align-items: center;
-    width: 100px;
+    width: 150px;
 }
 
-img{
-    width: 50px;
+.info_images{
+    width: 200px;
     height: auto;
+    border: 2px solid #3882f6;
+    
 }
 
 .testimonial{
@@ -73,6 +105,7 @@ img{
     
     padding: 32px;
     width: 900px;
+    height: 400px;
     margin: auto;
     
 }
@@ -92,26 +125,68 @@ em{
 }
 
 .last_section{
-    margin-top: 32px;
+    margin-top: 64px;
+    height: 200px;
+    
 }
 .contact_us{
     background-color: #3882f6;
-    padding: 16px;
-    width: 600px;
+    color: white;
+    width: 800px;
+    height: 100px;
     
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     margin: auto;
+
+    padding: 32px;
+}
+
+.contact_text{
+    display: flex;
+    flex-direction: column;
 }
 
 h1{
     font-size: 48px;
+    font-weight: 900;
+    color: #f9faf8;
 }
 
 h2{
+    font-size: 36px;
+}
+
+h3{
     font-size: 24px;
+    color: #f9faf8;
+
+}
+
+.pt18{
+    font-size: 18px;
+    color: #e5e7eb;
+    font-weight: lighter;
+}
+
+.quote{
+    font-style: italic;
 }
 
 button{
+    font-family: "Roboto";
+    font-size: 18px;
     background-color: #3882f6;
     color: white;
+
+    width: 125px;
+    height: 35px;
+}
+
+.bottom_signup{
+    outline: 2px solid white;
+}
+
+button, .info_images, .contact_us, #main_image{
+    border-radius: 5px;
 }
